2nd draft of the rough-outline of website with some info filled in

--- a/index.html
+++ b/index.html
@@ -12,22 +12,56 @@
 <body>
     <header>
         <h1>Jack Parker</h1>
-            <ul>
-                <li><a href="#">About Me</a></li>
-                <li><a href="#">My Work</a></li>
-                <li><a href="#">Resume</a></li>
-                <li><a href="#">Contact Me</a></li>
-            </ul>
+            <nav>
+                <ul>
+                    <li><a href="#">About Me</a></li>
+                    <li><a href="#">My Work</a></li>
+                    <li><a href="#">Resume</a></li>
+                    <li><a href="#">Contact Me</a></li>
+                </ul>
+            </nav>
     </header>
-        <div><img scr="#" alt="picture of jack parker"></div>
+        <div><img scr="./assests/images/Dog-Pic.fun.webp" alt="picture of jack parker" height="100px" width="100px"></div>
+    <section>
+        <h2>About Me</h2>
+        <p>Im a 24 year old from Columbus ohio, I'm an avid traveler and love to visit new places and learning new things.</p>
+    </section>
     <main>
         <h2>My Work</h2>
-        <ul>
-            <li></li>
-        </ul>
+        <section class="my work">
+            <ul>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+            </ul>
+        </section>
     </main>
-    <section>
+    <section class="my work">
+        <h2>Resume</h2>
+        <P>
 
+        </P>
     </section>
+
+    <section class="contact info"> 
+        <h2>Contact Info</h2>
+            <ul>
+                <li><a href="#">Phone: ###-###-####</a></li>
+                <li><a href="#">Email: me@mail.com</a></li>
+                <li><a href="#">GitHub</a></li>
+                <li><a href="#">LinkedIn</a></li>
+            </ul>
+    </section>
+
+
+<footer>
+    <p>Developed By Jack Parker</p>
+    <p>Copy right 2022</p>
+</footer>
 </body>
 </html>
