2nd draft of the rough-outline of website with some info filled in

--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Jack Parker</title>
     <link rel="icon" type="image/x-icon" href="./assests/favicon.ico">
-    <link rel="stylesheet" href="./assests/CSS/reset.css">
-    <link rel="stylesheet" href="./assests/CSS/style.css">
+    <link rel="stylesheet" href="./assets/CSS/reset.css">
+    <link rel="stylesheet" href="./assets/CSS/style.css">
 </head>
 <body>
     <header>
@@ -21,7 +21,7 @@
                 </ul>
             </nav>
     </header>
-        <div><img scr="./assests/images/Dog-Pic.fun.webp" alt="picture of jack parker" height="100px" width="100px"></div>
+        <div><img scr="./assets/images/Dog-pic" alt="picture of jack parker"></div>
     <section>
         <h2>About Me</h2>
         <p>Im a 24 year old from Columbus ohio, I'm an avid traveler and love to visit new places and learning new things.</p>
