3rd  draft with wire frame done just need the to fillout

--- a/index.html
+++ b/index.html
@@ -5,30 +5,33 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Jack Parker</title>
-    <link rel="icon" type="image/x-icon" href="./assests/favicon.ico">
+    <link rel="icon" type="image/x-icon" href="./assets/favicon.ico">
     <link rel="stylesheet" href="./assets/CSS/reset.css">
     <link rel="stylesheet" href="./assets/CSS/style.css">
 </head>
-<body>
+
     <header>
         <h1>Jack Parker</h1>
             <nav>
                 <ul>
-                    <li><a href="#">About Me</a></li>
-                    <li><a href="#">My Work</a></li>
-                    <li><a href="#">Resume</a></li>
-                    <li><a href="#">Contact Me</a></li>
+                    <li><a href="#About-Me">About Me</a></li>
+                    <li><a href="#My-Work">My Work</a></li>
+                    <li><a href="#Resume">Resume</a></li>
+                    <li><a href="#Contact-Me">Contact Me</a></li>
                 </ul>
             </nav>
     </header>
-        <div><img scr="./assets/images/Dog-pic" alt="picture of jack parker"></div>
-    <section>
+
+<body>
+        <div><img src="./assets/images/Dog-Pic.fun.webp" alt="picture of jack parker"></div>
+    <section id="About-Me">
         <h2>About Me</h2>
         <p>Im a 24 year old from Columbus ohio, I'm an avid traveler and love to visit new places and learning new things.</p>
     </section>
+
     <main>
         <h2>My Work</h2>
-        <section class="my work">
+        <section id="My-Work">
             <ul>
                 <li></li>
                 <li></li>
@@ -41,14 +44,15 @@
             </ul>
         </section>
     </main>
-    <section class="my work">
+
+    <section id="My-Work">
         <h2>Resume</h2>
         <P>
 
         </P>
     </section>
 
-    <section class="contact info"> 
+    <section id="Contact-Info"> 
         <h2>Contact Info</h2>
             <ul>
                 <li><a href="#">Phone: ###-###-####</a></li>
