--- a/index.html
+++ b/index.html
@@ -14,54 +14,49 @@
         <h1>Jack Parker</h1>
             <nav>
                 <ul>
-                    <li><a href="#About-Me">About Me</a></li>
+                    <li><a href="#Info-About-Me">My Info</a></li>
                     <li><a href="#My-Work">My Work</a></li>
-                    <li><a href="#Resume">Resume</a></li>
-                    <li><a href="#Contact-Me">Contact Me</a></li>
+                    <li><a href="#About-Me">About Me</a></li>
                 </ul>
             </nav>
     </header>
 
-<body>
-        <div><img src="./assets/images/Dog-Pic.fun.webp" alt="picture of jack parker"></div>
-    <section id="About-Me">
+<body> 
         <h2>About Me</h2>
-        <p>Im a 24 year old from Columbus ohio, I'm an avid traveler and love to visit new places and learning new things.</p>
-    </section>
+        <article id="About-Me">
+            <div><img src="./assets/images/Dog-Pic.fun.webp" alt="picture of jack parker" height="575px" width="900px"></div>
+                <p>Im a 24 year old from Columbus ohio, I'm an avid traveler and love to visit new places and learning new things. I am currently learn front and backend web development at THE Ohio State University. I plan to use this new skills to enter into the field of web development and start a life long career. Me and my family have deep roots in ohio, and Cincinnati in particuler, we've live here for over 7 generations. I'm a huge fan of all Ohio sports teams but my heart goes out to all Cincinnati teams the most and I look forward to Bengals hoppfully winning the superbowl, though I know it will most likely only be in my dreams.</p>
+        </article>
 
     <main>
-        <h2>My Work</h2>
-        <section id="My-Work">
-            <ul>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-            </ul>
+        <section class="main-content">
+            <h2>My Work</h2>
+            <article id="My-Work">
+                <ul>
+                    
+
+
+                    <li><a href="https://jackhparker.github.io/SEO-Refactor-HTML-Horizon/">Horiseon Webpage</a></li>
+                    <img src="./assets/images/sunrise-e1467740267536.jpg">
+
+                    <li>More Coming Soon!</li>
+                </ul>
+            </article>
+        </section>
+
+        <section class="My-info">
+            <article id="Info-About-Me"> 
+                <h2>My Info</h2>
+                    <ul>
+                        <li><a href="#">Phone: 740-644-2375</a></li>
+                        <li><a href="#">Email: jackhparker98@gmail.com</a></li>
+                        <li><a href="#">My Resume</a></li>
+                        <li><a href="#">GitHub</a></li>
+                        <li><a href="#">LinkedIn</a></li>
+                    </ul>
+            </article>
         </section>
     </main>
-
-    <section id="My-Work">
-        <h2>Resume</h2>
-        <P>
-
-        </P>
-    </section>
-
-    <section id="Contact-Info"> 
-        <h2>Contact Info</h2>
-            <ul>
-                <li><a href="#">Phone: ###-###-####</a></li>
-                <li><a href="#">Email: me@mail.com</a></li>
-                <li><a href="#">GitHub</a></li>
-                <li><a href="#">LinkedIn</a></li>
-            </ul>
-    </section>
-
 
 <footer>
     <p>Developed By Jack Parker</p>
