final draft of the websit for my current skills

--- a/index.html
+++ b/index.html
@@ -25,19 +25,17 @@
         <h2>About Me</h2>
         <article id="About-Me">
             <div><img src="./assets/images/Dog-Pic.fun.webp" alt="picture of jack parker" height="575px" width="900px"></div>
-                <p>Im a 24 year old from Columbus ohio, I'm an avid traveler and love to visit new places and learning new things. I am currently learn front and backend web development at THE Ohio State University. I plan to use this new skills to enter into the field of web development and start a life long career. Me and my family have deep roots in ohio, and Cincinnati in particuler, we've live here for over 7 generations. I'm a huge fan of all Ohio sports teams but my heart goes out to all Cincinnati teams the most and I look forward to Bengals hoppfully winning the superbowl, though I know it will most likely only be in my dreams.</p>
+                <p>My name is Jack Parker, and I'm a 24 year old from Columbus ohio, I'm an avid traveler and love to visit new places and learning new things. I am currently learn front and backend web development at THE Ohio State University. I plan to use this new skills to enter into the field of web development and start a life long career. Me and my family have deep roots in ohio, and Cincinnati in particuler, we've lived here for over 7 generations. I'm a huge fan of all Ohio sports teams but my heart goes out to all Cincinnati teams the most and I look forward to Bengals hoppfully winning the superbowl, though I know it will most likely only be in my dreams.</p>
         </article>
 
     <main>
+        <h2>My Work</h2>
         <section class="main-content">
-            <h2>My Work</h2>
             <article id="My-Work">
                 <ul>
-                    
-
-
                     <li><a href="https://jackhparker.github.io/SEO-Refactor-HTML-Horizon/">Horiseon Webpage</a></li>
-                    <img src="./assets/images/sunrise-e1467740267536.jpg">
+                    <img src="./assets/images/digital-marketing-meeting.jpg" alt="group of people around a table in a meeting" height="575px" width="900px">
+                        <p>This project requiered us to go in and do an update to the websites code, in order to bring it up to date with html5. While I gave the code a "facelift" I needed to keep the same look and function it already had on the front end for the user.</p>
 
                     <li>More Coming Soon!</li>
                 </ul>
@@ -49,10 +47,10 @@
                 <h2>My Info</h2>
                     <ul>
                         <li><a href="#">Phone: 740-644-2375</a></li>
-                        <li><a href="#">Email: jackhparker98@gmail.com</a></li>
+                        <li><a href="jackhparker98@gmail.com">Email: jackhparker98@gmail.com</a></li>
                         <li><a href="#">My Resume</a></li>
-                        <li><a href="#">GitHub</a></li>
-                        <li><a href="#">LinkedIn</a></li>
+                        <li><a href="https://github.com/JackhParker/OSU-Personal-Portfolio-Websit-JackParker">GitHub</a></li>
+                        <li><a href="https://www.linkedin.com/in/jack-parker-29882622b/">LinkedIn</a></li>
                     </ul>
             </article>
         </section>
