--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                 <h2>My Info</h2>
                     <ul>
                         <li><a href="#">Phone: 740-644-2375</a></li>
-                        <li><a href="jackhparker98@gmail.com">Email: jackhparker98@gmail.com</a></li>
+                        <li><a href="gmail.com">Email: jackhparker98@gmail.com</a></li>
                         <li><a href="#">My Resume</a></li>
                         <li><a href="https://github.com/JackhParker/OSU-Personal-Portfolio-Websit-JackParker">GitHub</a></li>
                         <li><a href="https://www.linkedin.com/in/jack-parker-29882622b/">LinkedIn</a></li>
