fixing the gmail link

--- a/index.html
+++ b/index.html
@@ -36,7 +36,6 @@
                     <li><a href="https://jackhparker.github.io/SEO-Refactor-HTML-Horizon/">Horiseon Webpage</a></li>
                     <img src="./assets/images/digital-marketing-meeting.jpg" alt="group of people around a table in a meeting" height="575px" width="900px">
                         <p>This project requiered us to go in and do an update to the websites code, in order to bring it up to date with html5. While I gave the code a "facelift" I needed to keep the same look and function it already had on the front end for the user.</p>
-
                     <li>More Coming Soon!</li>
                 </ul>
             </article>
@@ -47,7 +46,7 @@
                 <h2>My Info</h2>
                     <ul>
                         <li><a href="#">Phone: 740-644-2375</a></li>
-                        <li><a href="gmail.com">Email: jackhparker98@gmail.com</a></li>
+                        <li><a href="http://gmail.com">Email: jackhparker98@gmail.com</a></li>
                         <li><a href="#">My Resume</a></li>
                         <li><a href="https://github.com/JackhParker/OSU-Personal-Portfolio-Websit-JackParker">GitHub</a></li>
                         <li><a href="https://www.linkedin.com/in/jack-parker-29882622b/">LinkedIn</a></li>
